--- a/Admin_Panel/src/styles/Session.css
+++ b/Admin_Panel/src/styles/Session.css
@@ -1,7 +1,4 @@
-.session {
-    width:100%
-    display:flex;
-}
+
 
 .session-header-1 {
     display:flex;
@@ -12,6 +9,8 @@
 .session-header-2 {
     display: flex;
     gap: 15%;
+    justify-content:space-between;
+    
 }
 
 .item {
