--- a/Admin_Panel/src/styles/Profile.css
+++ b/Admin_Panel/src/styles/Profile.css
@@ -1,8 +1,16 @@
-.profile {
-    flex: 1; 
-    align-items:content;
-    padding: 48px
+.profile{
+    display: flex;
+    align-items:normal;
 }
-.edit {
-        padding:40px
+
+.profile span {
+    padding-top: 15px;
+    padding-right: 20px;
+}
+
+.profile img{
+    border-radius: 100px;
+    height: 40px;
+    padding: 5px;
+    width: 40px;
 }
